Fix copy button overflow in firefox

--- a/app-frontend/src/assets/styles/sass/theme/high-contrast/components/_button.scss
+++ b/app-frontend/src/assets/styles/sass/theme/high-contrast/components/_button.scss
@@ -139,7 +139,7 @@ Copy button on project share modal
 */
 .btn-copy-modal,
 .btn-copy-modal-first {
-  width: 99.47px;
+  width: 100px;
   height: 39px;
 }
 
